--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-.idea
+build-docs-html/
+build-docs-pdf/
+build-docs-revealjs/
+target/
+asciidocs/revealjs/
+revealjs.zip
+gh-pages/
+.idea/
+*.iml
+.DS_Store
+.env
+*.zip
